# todo-api-rust

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/src/handlers/: auth_handler.rs  mod.rs  todo_handler.rs  user_handler.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/auth/: authenticate.rs  jwt.rs  mod.rs
application/src/todo/: create.rs  read.rs
application/src/user/: create.rs
domain/: Cargo.toml
domain/src/: lib.rs  schema.rs  todo.rs  user.rs
infrastructure/: Cargo.toml
infrastructure/migrations/2023-04-09-031425_create_user/: up.sql
infrastructure/migrations/2023-04-10-000623_create_todos/: up.sql
infrastructure/src/: lib.rs
shared/: Cargo.toml
shared/src/: responses.rs
