[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = "1.0.159"
serde_json = "1"
domain = { path = "../domain" }
application = { path = "../application" }
shared = { path = "../shared" }
env_logger = "0.10.0"
dotenvy = "0.15"