[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.159", features = ["derive"]}
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
chrono = {version = "0.4.24", features=["serde"]}